[gd_scene load_steps=5 format=2]

[ext_resource path="res://RewardSlot.gd" type="Script" id=1]
[ext_resource path="res://img/daily_unselect.png" type="Texture" id=2]
[ext_resource path="res://img/daily_selected.png" type="Texture" id=3]
[ext_resource path="res://sounds/sound_reward_animate.wav" type="AudioStream" id=4]

[node name="RewardSlot" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Unselect" type="Sprite" parent="." index="0"]

scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Selected" type="Sprite" parent="." index="1"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="RewardSprite" type="Sprite" parent="." index="3"]

scale = Vector2( 0.2, 0.2 )
_sections_unfolded = [ "Transform" ]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]


